Исправлена обработка вспомогательных узлов в алгоритме